--- a/P000033.opf/meta.yml
+++ b/P000033.opf/meta.yml
@@ -1,15 +1,17 @@
-ebook_metadata:
+id: P000033
+initial_creation_type: ebook
+source_metadata:
   title: ༄༅། །ངེས་དོན་ཕྱག་རྒྱ་ཆེན་པོའི་ཕྱོགས་ནས་དྲི་བ་ལ་ལན་དུ་བགྱིས་པ་ཡིད་བཞིན་ནོར་བུའི་དོ་ཤལ་ཞེས་བྱ་བ་བཞུགས་སོ།
     །
   authors:
   - མཛད་པ་པོ། མཁས་གྲུབ་ཆེན་པོ་རྩེ་ལེ་སྣ་ཚོགས་རང་གྲོལ།
-  sku: TSD-TSE-05
   layers:
   - book_title
   - author
   - chapter_title
   - quotation
   - yigchung
+  id: TSD-TSE-05
 web_metadata:
   title:
     en: A Garland of Wish-Fulfilling Gems:Answers to Questions on Mahamudra
