--- a/P000033.opf/layers/v001/BookTitle.yml
+++ b/P000033.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 8b6a33beb2f442bebbe05314a573ff9f
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
