--- a/P000033.opf/layers/v001/Quotation.yml
+++ b/P000033.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: 12deee3c01c34e3dadaeb0b36d484c21
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 09325d9ad6a44d1894c66af765437259
