--- a/P000033.opf/layers/v001/Yigchung.yml
+++ b/P000033.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: 36e4a032df054d1f9e39e6c87db5494d
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 327d3e9a67f1451a93b6d99566ee0b76
