layers filename capitalized

--- a/P000033.opf/layers/v001/Quotation.yml
+++ b/P000033.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: 12deee3c01c34e3dadaeb0b36d484c21
-annotation_type: Tsawa
+annotation_type: Quotation
 revision: '00001'
 annotations:
   09325d9ad6a44d1894c66af765437259:
